# 100KBBH

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  gen_resources.py  meson.build
.github/workflows/: build.yml
include/100KBBH/: Game.h
include/100KBBH/model/: Model.h  Models.h
include/100KBBH/object/: Bullet.h  BulletSource.h  Object.h  Player.h
include/100KBBH/object/wave/: WaveHandler.h
include/100KBBH/shader/: Shader.h  Shaders.h
include/100KBBH/texture/: Texture.h  Textures.h
include/100KBBH/util/: Util.h
resources/assets/shader/: background.frag  foreground.frag  foreground.frag.in  main.vert  object.frag
src/: Game.cpp  Main.cpp  MainGLFW.cpp  MainWin32.cpp
src/model/: Model.cpp  Models.cpp
src/object/: Bullet.cpp  BulletSource.cpp  Object.cpp  Player.cpp
src/object/wave/: WaveHandler.cpp
src/shader/: Shader.cpp  Shaders.cpp
src/texture/: Texture.cpp  Textures.cpp
src/util/: Util.cpp
